fix: chevron safari fix

--- a/src/modules/account/components/MaterialRequestEvaluatorOptions/MaterialRequestEvaluatorOptions.module.scss
+++ b/src/modules/account/components/MaterialRequestEvaluatorOptions/MaterialRequestEvaluatorOptions.module.scss
@@ -40,6 +40,11 @@
 			padding-left: $spacer-xs;
 			margin-left: auto;
 
+			// Safari only
+			@supports (background: -webkit-named-image(i)) {
+				padding-right: $spacer-md;
+			}
+
 			// Enable Ligatures
 			font-feature-settings: "liga";
 			font-variant-ligatures: discretionary-ligatures;
